2013-03-01  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	 * src/Makefile.am: Added rules for sphgtod to be built into a
	 static-only library, libsphgtod.a.
	 * src/sphgtod.c: New file. Implement libsphgtod.a.
	 * src/sphgtod.h: New file.
	 * src/sphtimer.h (sphfastcpufreq): Declare static so that
	 libsphgtod.a can use this symbol but still link against libsphde.
	 * src/tests/sphgtod_t.c: Test sphgtod.

2013-02-22  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sasatom_powerpc.h (__arch_compare_and_swap): Use isync.
	* src/tests/sphsinglepcqueue_tt.c (test_unit): Use SPH_TIMERTEST_VERIFY.
	* src/tests/sphsinglepcqueue_ttt.c: Add tests for 2, 3, 4 thread cascade.
	Add examples of hysteresis based on queue depth.

2012-06-27  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/Makefile.am: Add sphsinglepcqueue_tt and sphsinglepcqueue_ttt
	tests.
	* src/sphsinglepcqueue.cpp (SPHSinglePCQueueEmpty): Add test for valid
	entry to close race in consumer polling.
	* src/tests/sphsinglepcqueue_tt.c: New file.
	* src/tests/sphsinglepcqueue_ttt.c: New file.
	* src/tests/sphlflogger_t.c: Remove warnings.
	* src/tests/sphsinglepcqueue_t.c: Likewise.
	* src/tests/sphthread_t.c: Likewise.
	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* examples/Makefile.in: Likewise.
	* ltmain.sh: Likewise.
	* m4/ltsugar.m4: Likewise.
	* m4/ltversion.m4: Likewise.
	* src/Makefile.in: Likewise.

2012-06-22  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphsinglepcqueue.cppi (SPHSinglePCQueueInitInternal): Fix
	adjustment for DEFAULT_PAGE and buf_size round to an integral
	multiple of the stride.
	* src/tests/sphsinglepcqueue_t.c: Add more tests.

2012-06-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* src/sassim.h (SASJoinRegionByName): Use const for argument.
	* src/sassim.cpp: Add static on local functions.

2012-06-13  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* doc/libshpde-doxygen-sasutil.doxy: Renamed
	libsphde-doxygen-sasutil.doxy.